2012-01-24  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/make_deb_package.sh,
	  pandora_server_installer,
	  pandora_server.spec: Auto-create the netflow storage dir.

	* bin/pandora_server: Aesthetic changes.

2012-01-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/PredictionServer.pm,
	  lib/PandoraFMS/Core.pm,
	  bin/pandora_server: Added support for enterprise netflow modules.

	* lib/PandoraFMS/PluginServer.pm: Run plugins inside eval to avoid
	  server crashes.

2012-01-23  Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: Fixed mismatch arguments call of
	pandora_create_template_module.

	* lib/PandoraFMS/Core.pm: Fixed misleading comment about
	pandora_create_template_module function signature.

2012-01-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed some typos and
	help

2012-01-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Added new options to CLI
	managing conf files and updating agents...

2012-01-18  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Add option to CLI to 
	get all policies or the policies with a given agent

2012-01-18  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added new options to
	CLI as get agent modules, get policy modules, 
	validate alerts, and more

2012-01-17  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added option to add all
	policy to application queue in CLI. Organize help
	by categories

2012-01-17  Koichiro Kikuchi <koichiro@rworks.jp>

	* pandora_server.redhat.spec: Fixed a wrong dependency.
	  RHEL has a net-snmp-perl, not a perl-SNMP.

2012-01-17  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added the option
	exec_from_file to import CSV data. Fixed create_user
	option entities

2012-01-16  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a missed safe input in